--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,7 +175,6 @@ jobs:
           command: |
             source venv/bin/activate
             pytest -v --junitxml=test-reports/junit.xml \
-            --cov-config=PyDynamic/.coveragerc --cov=PyDynamic/ \
             PyDynamic/ > test-reports/PyDynamic.log
 
       # Store test results.
@@ -218,9 +217,8 @@ jobs:
          command: |
            python3 -m venv venv
            source venv/bin/activate
-           pip install --upgrade pip numpy
+           pip install --upgrade pip numpy pytest
            pip install -r agentMET4FOF/requirements.txt
-           pip install pytest pytest-cov
 
       - save_cache:
           paths:
@@ -233,8 +231,7 @@ jobs:
           name: Run agentMET4FOF tests
           command: |
             source venv/bin/activate
-            pytest -v --junitxml=test-reports/junit.xml \
-            --cov-config=.coveragerc --cov=agentMET4FOF/ \
+            pytest -v --junitxml=test-reports/junit.xml \ \
             agentMET4FOF/ > test-reports/agentMET4FOF.log
 
       # Store test results.
@@ -244,7 +241,6 @@ jobs:
 
       - store_test_results:
          path: test-reports
-
 
   test_agentMET4FOF_anomaly_detection:
     executor: tester
@@ -278,8 +274,8 @@ jobs:
          command: |
            python3 -m venv venv
            source venv/bin/activate
-           pip install --upgrade pip pip-tools numpy
-           pip-sync agentMET4FOF_anomaly_detection/requirements.txt
+           pip install --upgrade pip setuptools pip-tools
+           pip-sync agentMET4FOF_anomaly_detection/dev-requirements.txt agentMET4FOF_anomaly_detection/requirements.txt
 
 
       - save_cache:
@@ -293,10 +289,9 @@ jobs:
           working_directory: $CIRCLE_WORKING_DIRECTORY/agentMET4FOF_anomaly_detection
           name: Run agentMET4FOF_anomaly_detection tests
           command: |
-            source $CIRCLE_WORKING_DIRECTORY/venv/bin/activate
-            pytest -v --junitxml=$CIRCLE_WORKING_DIRECTORY/test-reports/junit.xml \
-            --cov-config=.coveragerc --cov=. \
-            . > $CIRCLE_WORKING_DIRECTORY/test-reports/agentMET4FOF_anomaly_detection.log
+            source ../venv/bin/activate
+            pytest -v --junitxml=../test-reports/junit.xml \
+            . > ../test-reports/agentMET4FOF_anomaly_detection.log
 
       # Store test results.
       - store_artifacts:
@@ -305,9 +300,6 @@ jobs:
 
       - store_test_results:
          path: test-reports
-
-
-
 
   test_agentMET4FOF_ml:
     executor: tester
@@ -341,7 +333,7 @@ jobs:
          command: |
            python3 -m venv venv
            source venv/bin/activate
-           pip install --upgrade pip numpy
+           pip install --upgrade pip numpy pytest
            pip install -r agentMET4FOF_ml/requirements.txt
 
 
@@ -356,10 +348,9 @@ jobs:
           working_directory: $CIRCLE_WORKING_DIRECTORY/agentMET4FOF_ml
           name: Run agentMET4FOF_ml tests
           command: |
-            source $CIRCLE_WORKING_DIRECTORY/venv/bin/activate
-            pytest -v --junitxml=$CIRCLE_WORKING_DIRECTORY/test-reports/junit.xml \
-            --cov-config=.coveragerc --cov=. \
-            . > $CIRCLE_WORKING_DIRECTORY/test-reports/agentMET4FOF_ml.log
+            source ../venv/bin/activate
+            pytest -v --junitxml=../test-reports/junit.xml \
+            . > ../test-reports/agentMET4FOF_ml.log
 
       # Store test results.
       - store_artifacts:
