--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,9 +21,9 @@ workflows:
       - test_agentMET4FOF
       - test_agentMET4FOF_ml
       - test_agentMET4FOF_anomaly_detection
-      - semantic-release:
-          # Create 'release' job to create a release and publish it on GitHub and
-          # Zenodo.
+      - preview-release:
+          # Test the 'deploy' job to avoid trouble when Pull Requests get merged and
+          # to preview publishing actions and the new changelog.
           requires:
               - build_and_test_conda_env
               - build_and_test_venv_env
@@ -31,10 +31,22 @@ workflows:
               - test_agentMET4FOF
               - test_agentMET4FOF_ml
               - test_agentMET4FOF_anomaly_detection
+      - confirm_release:
+          # This job allows for checking that the release we will create in the
+          # next step actually is the desired release, by observing the result of
+          # test_deploy.
+          type: approval
+          requires:
+            - preview-release
           filters:
-              branches:
-                # This assures the job only being triggered on branch master.
-                only: /master/
+            branches:
+              # This assures the job only being triggered on branch master.
+              only: /master/
+      - semantic-release:
+          # Create 'release' job to create a release and publish it on GitHub and
+          # Zenodo.
+          requires:
+              - confirm_release
 
 jobs:
   build_and_test_conda_env:
@@ -396,3 +408,50 @@ jobs:
             git config --global user.name "semantic-release (via CircleCI)"
             git config --global user.email "bjoern.ludwig@ptb.de"
             semantic-release publish
+
+
+  preview-release:
+    executor: publisher
+
+    working_directory: ~/repo
+
+    steps:
+      # Checkout code.
+      - checkout
+
+      # Download and cache dependencies.
+      - restore_cache:
+          keys:
+            # Specify the unique identifier for the cache.
+            - publisher-dependencies-{{ checksum "dev-requirements.txt" }}
+
+      # Install dependencies.
+      - run:
+          name: Install dependencies
+          command: |
+            python3 -m venv venv
+            source venv/bin/activate
+            pip install --upgrade pip pip-tools
+            pip-sync dev-requirements.txt
+
+      - save_cache:
+          paths:
+            - ./venv
+          key: >-
+            publisher-dependencies-{{ checksum "dev-requirements.txt" }}
+
+      # Fake publish, just to make sure everything works after merging this PR or
+      # previewing the changelog and the version number.
+      - run:
+          name: Run semantic-release --noop publish
+          command: |
+            unset CIRCLE_PULL_REQUEST CIRCLE_PULL_REQUESTS CI_PULL_REQUEST \
+              CI_PULL_REQUESTS
+            export CIRCLE_BRANCH=master
+            source ${PYENV}/bin/activate
+            git config --global user.name "semantic-release (via CircleCI)"
+            git config --global user.email "bjoern.ludwig@ptb.de"
+            echo "The changelog of the next release will contain:"
+            semantic-release --unreleased changelog
+            echo "The output of 'semantic-release --noop publish' is:"
+            semantic-release --noop publish
