--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,8 @@ workflows:
       - test_agentMET4FOF
       - test_agentMET4FOF_ml
       - test_agentMET4FOF_anomaly_detection
-      - preview-release:
-          # Test the 'deploy' job to avoid trouble when Pull Requests get merged and
+      - preview_release:
+          # Test the 'release' job to avoid trouble when Pull Requests get merged and
           # to preview publishing actions and the new changelog.
           requires:
               - build_and_test_conda_env
@@ -31,22 +31,24 @@ workflows:
               - test_agentMET4FOF
               - test_agentMET4FOF_ml
               - test_agentMET4FOF_anomaly_detection
-      - confirm_release:
+      - confirm_previewed_release_actions:
           # This job allows for checking that the release we will create in the
           # next step actually is the desired release, by observing the result of
-          # test_deploy.
+          # preview_release.
           type: approval
           requires:
-            - preview-release
+            - preview_release
           filters:
             branches:
               # This assures the job only being triggered on branch master.
               only: /master/
-      - semantic-release:
-          # Create 'release' job to create a release and publish it on GitHub and
-          # Zenodo.
+      - release:
+          # Job to potentially create a release based on python-semantic-release's
+          # decision and publish it on GitHub and Zenodo. This requires manual
+          # approval in the previous step, which is only triggered on branch master,
+          # thus this job here is triggered only on master as well.
           requires:
-              - confirm_release
+              - confirm_previewed_release_actions
 
 jobs:
   build_and_test_conda_env:
@@ -370,7 +372,7 @@ jobs:
       - store_test_results:
          path: test-reports
 
-  semantic-release:
+  release:
     executor: publisher
 
     working_directory: ~/repo
@@ -400,7 +402,7 @@ jobs:
           key: >-
             publisher-dependencies-{{ checksum "dev-requirements.txt" }}
 
-      # Publish it!
+      # Publish it, if there is anything to publish!
       - run:
           name: Run semantic-release publish
           command: |
@@ -440,10 +442,10 @@ jobs:
           key: >-
             publisher-dependencies-{{ checksum "dev-requirements.txt" }}
 
-      # Fake publish, just to make sure everything works after merging this PR or
-      # previewing the changelog and the version number.
+      # Fake publish, just to make sure everything works after merging a PR and
+      # before actual release jos run.
       - run:
-          name: Run semantic-release --noop publish
+          name: Preview python-semantic-release actions
           command: |
             unset CIRCLE_PULL_REQUEST CIRCLE_PULL_REQUESTS CI_PULL_REQUEST \
               CI_PULL_REQUESTS
