--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -412,7 +412,7 @@ jobs:
             semantic-release publish
 
 
-  preview-release:
+  preview_release:
     executor: publisher
 
     working_directory: ~/repo
