ci(CircleCI): repair CI config by installing numpy prior to anything else for anomaly detection

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -288,7 +288,7 @@ jobs:
          command: |
            python3 -m venv venv
            source venv/bin/activate
-           pip install --upgrade pip setuptools pip-tools
+           pip install --upgrade pip setuptools pip-tools numpy
            pip-sync tutorials/agentMET4FOF_anomaly_detection/dev-requirements.txt tutorials/agentMET4FOF_anomaly_detection/requirements.txt
 
 
