--- a/requirements.in
+++ b/requirements.in
@@ -1,8 +1,13 @@
 -r agentMET4FOF/requirements.txt
 -r tutorials/agentMET4FOF_anomaly_detection/requirements.in
+-r tutorials/agentMET4FOF_anomaly_detection/dev-requirements.in
 -r tutorials/agentMET4FOF_bayesian_neural_network_ZeMA/requirements.txt
 -r tutorials/agentMET4FOF_ml/requirements.txt
 -r tutorials/agentMET4FOF_ZeMA_emc/requirements.in
 -r PyDynamic/requirements/requirements.in
 -r PyDynamic/requirements/dev-requirements.in
 -r tutorials/ZeMA-machine-learning-tutorials/requirements.txt
+-r ZeMA_testbed_Bayesian_machine_learning/requirements.in
+-r tutorials/agentMET4FOF_sensors/requirements.in
+-r time-series-metadata/requirements/dev-requirements.in
+-r time-series-buffer/requirements.txt
