ci(CircleCI): really install pytest for testing submodule _agentMET4FOF_sensors_ in CI pipeline

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -316,8 +316,9 @@ jobs:
          command: |
            python3 -m venv venv
            source venv/bin/activate
-           pip install --upgrade pip pip-tools pytest
+           pip install --upgrade pip pip-tools
            pip-sync tutorials/agentMET4FOF_sensors/requirements.txt
+           pip install --upgrade pytest
 
 
       - save_cache:
